Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/EffectivelyFinal01.out
EffectivelyFinal01.java:15:65: compiler.err.cant.ref.non.effectively.final.var: nefPar, (compiler.misc.lambda)
1 error
